--- a/inbox/README
+++ b/inbox/README
@@ -74,4 +74,23 @@
 int myFunction(int x, int y) {
   return x + y;*/
   }
-  
+  #include <GyverNTC.h>
+#include <U8glib.h>
+
+U8GLIB_SSD1306_128X64 u8g(U8G_I2C_OPT_NONE | U8G_I2C_OPT_DEV_0);  // I2C / TWI
+// #include <DallasTemperature.h>
+
+#define compr  5    // реле компрессора
+#define fanPin  6    // пин вентилятора
+#define releKN  7    // Электромагнит
+#define knopOsv 8
+#define LedT  13    // 
+
+// **************************
+
+// термистор на пине А1 - А3
+// сопротивление резистора 10к
+// тепловой коэффициент 3950
+GyverNTC therm1(0, 10000, 3950);  // морозилка
+GyverNTC therm2(1, 10000, 3950);  //  холодилка
+GyverNTC therm3(2, 10000, 3950);  //  испарилка (испарение)
