--- a/inbox/README
+++ b/inbox/README
@@ -94,3 +94,12 @@ U8GLIB_SSD1306_128X64 u8g(U8G_I2C_OPT_NONE | U8G_I2C_OPT_DEV_0);  // I2C / TWI
 GyverNTC therm1(0, 10000, 3950);  // морозилка
 GyverNTC therm2(1, 10000, 3950);  //  холодилка
 GyverNTC therm3(2, 10000, 3950);  //  испарилка (испарение)
+
+float getTempAdd (){
+  therm1.getTempAverage();
+  therm2.getTempAverage();
+  therm3.getTempAverage();
+  tmor = therm1.getTempAverage();
+  thol = therm2.getTempAverage();
+  tisp = therm3.getTempAverage();
+}
