--- a/inbox/README
+++ b/inbox/README
@@ -103,3 +103,81 @@ float getTempAdd (){
   thol = therm2.getTempAverage();
   tisp = therm3.getTempAverage();
 }
+--- Дисплей ---
+void displ_Vvod (){
+    getTempAdd();
+    u8g.firstPage();
+    delay(1000);
+    do {
+     draw();
+  } while (u8g.nextPage());
+}
+//--------------------------------------------------------------------
+void u8g_prepare(void) {
+  u8g.setFont(u8g_font_6x10);
+  u8g.setFontRefHeightExtendedText();
+  u8g.setDefaultForegroundColor();
+  u8g.setFontPosTop();
+}
+void comobi(void) {
+  u8g.setFont(u8g_font_9x15B);
+  u8g.setPrintPos(48, 30);
+  u8g.print("PAUSE");
+  u8g.setFont(u8g_font_6x10);
+  u8g.setPrintPos(0, 50);
+  u8g.print(thol);
+  u8g.setPrintPos(46, 50);
+  u8g.print(tmor);
+  u8g.setPrintPos(88, 50);
+  u8g.print(tisp);
+
+ // u8g.setFontRefHeightExtendedText();
+ // u8g.setDefaultForegroundColor();
+ // u8g.setFontPosTop();
+}
+void alarmCompr(void) {
+u8g.setFont(u8g_font_9x15B);
+  u8g.setPrintPos(48, 30);
+  u8g.print("ALARM");
+}
+void text_Prob() {
+  u8g_prepare();
+  u8g.setPrintPos(0, 0);
+  u8g.print(" ");
+  //u8g.setPrintPos(7, 0);
+  u8g.print(thol);
+  u8g.setPrintPos(44,0);
+  u8g.print(" ");
+  //u8g.setPrintPos(40,0);
+  u8g.print(tmor);
+   u8g.setPrintPos(88, 0);
+  u8g.print(" ");
+ // u8g.setPrintPos(74, 0);
+  u8g.print(tisp);
+  u8g.setPrintPos(0, 18);
+  u8g.print ("Work : ");
+  //u8g.setPrintPos(56, 18);
+  u8g.print(s2);
+  u8g.setPrintPos(64, 18);
+  u8g.print ("Klap : ");
+  u8g.print (kl); //(knopOsv);
+  u8g.setPrintPos(0, 36);
+  u8g.print("kompr : ");
+  u8g.setPrintPos(48, 36);
+ // myString s;
+  u8g.print(s);
+  u8g.setPrintPos(0, 54);
+   u8g.print("fan  : ");
+    u8g.print(s1);
+    u8g.setPrintPos(60, 54);
+   u8g.print("prov: ");
+    u8g.print(provH);
+  //u8g.setScale();   ???????????????
+ // u8g.drawStr(40, 40, tex);
+  // u8g.undoScale();
+}
+uint8_t draw_state = 0;
+void draw(void) {
+  u8g_prepare();
+  text_Prob();
+}
